@@ -32,6 +32,7 @@ libdrm_freedreno.so.1 libdrm-freedreno1 #MINVER#
  fd_ringbuffer_flush@Base 0
  fd_ringbuffer_grow@Base 2.4.70
  fd_ringbuffer_new@Base 0
+ fd_ringbuffer_reloc2@Base 2.4.74
  fd_ringbuffer_reloc@Base 0
  fd_ringbuffer_reset@Base 0
  fd_ringbuffer_set_parent@Base 0
