@@ -69,6 +69,7 @@ libdrm_intel.so.1 libdrm-intel1 #MINVER#
  drm_intel_gem_bo_wait@Base 2.4.36
  drm_intel_gem_context_create@Base 2.4.37
  drm_intel_gem_context_destroy@Base 2.4.37
+ drm_intel_gem_context_get_id@Base 2.4.74
  drm_intel_get_aperture_sizes@Base 2.4.26
  drm_intel_get_eu_total@Base 2.4.60
  drm_intel_get_min_eu_in_pool@Base 2.4.71
