@@ -54,6 +54,7 @@ libdrm.so.2 libdrm2 #MINVER#
  drmGetContextPrivateMapping@Base 2.3.1
  drmGetContextTag@Base 2.3.1
  drmGetDevice@Base 2.4.66
+ drmGetDeviceNameFromFd2@Base 2.4.74
  drmGetDeviceNameFromFd@Base 2.4.16
  drmGetDevices@Base 2.4.65
  drmGetEntry@Base 2.3.1
